 Development
=============

Stream support [NEW]
--------------------
It is now possible to have IMAPClient run an external command to
establish a connection to the IMAP server via a new *stream* keyword
argument to the initialiser. This is useful for exotic connection or
authentication setups. The *host* argument is used as the command to
run.

Thanks to Dave Eckhardt for the original patch.


=====
 0.9
=====

Gmail Label Support
-------------------
New methods have been added for interacting with Gmail's label API:
get_gmail_labels, add_gmail_labels, set_gmail_labels,
remove_gmail_labels. Thanks to Brian Neal for the patches.

Removed Code Duplication (#9)
-----------------------------
A signficant amount of duplicated code has been removed by abstracting
out common command handling code. This will make the Python 3 port and
future maintenance easier.

livetest can now be run against non-dummy accounts (#108)
---------------------------------------------------------
Up until this release the tests in imapclient.livetest could only be
run against a dummy IMAP account (all data in the account would be
lost during testing). The tests are now limited to a sub-folder
created by the tests so it is ok to run them against an account that
contains real messages. These messages will be left alone.

Minor Features
--------------
* Don't traceback when an IMAP server returns a all-digit folder name
  without quotes. Thanks to Rhett Garber for the bug report. (#107)
* More tests for ACL related methods (#89)
* More tests for namespace()
* Added test for read-only select_folder()

Minor Bug Fixes
---------------
* Fixed rename live test so that it uses folder namespaces (#100).
* Parse STATUS responses robustly - fixes folder_status() with MS
  Exchange.
* Numerous livetest fixes to work around oddities with the MS
  Exchange IMAP implementation.

=======
 0.8.1
=======

* IMAPClient wasn't installing on Windows due to an extra trailing